@@ -40,6 +40,7 @@ Clients:
 - Add --ciphers to allow specifying which TLS ciphers to support.
 - Add support for SRV lookups.
 - Add -N to sub client to suppress printing of EOL after the payload.
+- Add -T to sub client to suppress printing of a topic hierarchy.
 
 1.2.3 - 20131202
 ================
